Add -Dnet.bytebuddy.experimental=true on tests